syntax = "proto3";

package filehandler;

option go_package = "github.com/thomas-osgood/ofs/protobufs/filehandler";

import "common.proto";

// gRPC service designed to handle uploading and
// downloading of files.
service Fileservice {
        // rpc designed to upload a file from the machine the
        // agent is running on to the control server.
        rpc DownloadFile(stream FileChunk) returns (common.StatusMessage);

        // rpc designed to download a file to the machine the
        // agent is running on from the control server.
        rpc UploadFile (FileRequest) returns (stream FileChunk);
}

// message designed to transfer chunks of a 
// file from one machine to another.
message FileChunk {
        bytes chunk = 1;
}

// message designed to request a file.
message FileRequest {
        string filename = 1;
}
